file(GLOB_RECURSE ACARINE_BENCHMARKS "src/**.c" "src/**.cpp")

foreach(BENCHMARK ${ACARINE_BENCHMARKS})
 string(REPLACE "/" ";" BENCHMARK_FILE_NAME "${BENCHMARK}")
 list(GET BENCHMARK_FILE_NAME -1 BENCHMARK_FILE_NAME)
 string(REPLACE ".cpp" "" BENCHMARK_FILE_NAME "${BENCHMARK_FILE_NAME}")
 string(REPLACE ".c" "" BENCHMARK_FILE_NAME "${BENCHMARK_FILE_NAME}")

 set(BENCHMARK_TARGET_NAME "${BENCHMARK_FILE_NAME}_benchmark")

 add_executable(${BENCHMARK_TARGET_NAME} ${BENCHMARK})
 target_include_directories(
  ${BENCHMARK_TARGET_NAME} PRIVATE
  include
  ${ACARINE_TEST_COMMON_INCLUDE_DIRS}
  ${GOOGLE_TEST_INCLUDE_DIRS}
  ${GOOGLE_BENCHMARK_INCLUDE_DIRS}
 )
 target_link_libraries(
  ${BENCHMARK_TARGET_NAME}
  acarine
  ${ACARINE_TEST_COMMON_TARGET}
  ${GOOGLE_BENCHMARK_TARGET}
  ${GOOGLE_BENCHMARK_MAIN_TARGET}
 )
 target_compile_options(${BENCHMARK_TARGET_NAME} PRIVATE "${ACARINE_COMPILE_FLAGS}")
 target_link_options(${BENCHMARK_TARGET_NAME} PUBLIC "${ACARINE_LINK_FLAGS}")
 add_test(
  NAME ${BENCHMARK_TARGET_NAME}
  COMMAND ./${BENCHMARK_TARGET_NAME}
  WORKING_DIRECTORY benchmark
 )
 list(APPEND ACARINE_TEST_TARGETS "${BENCHMARK_TARGET_NAME}")
endforeach()

set(ACARINE_TEST_TARGETS "${ACARINE_TEST_TARGETS}" PARENT_SCOPE)
